# kothaset

./: .gitignore  .golangci.yml  .goreleaser.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  context.yaml  go.mod  go.sum  topics.txt
.github/workflows/: ci.yml  release.yml
cmd/kothaset/: main.go
docs/: api.md  configuration.md  examples.md  faq.md  providers.md  quickstart.md  schemas.md  troubleshooting.md
examples/: dataset.jsonl  dataset.jsonl.checkpoint  kothaset.yaml  topics.txt
internal/cli/: commands.go  commands_test.go  flags_test.go  generate.go  generate_test.go  init.go  root.go  version.go
internal/config/: config.go  config_test.go  loader.go  loader_test.go  secrets.go  secrets_test.go
internal/context/: context.go
internal/fsutil/: path.go
internal/generator/: generator.go  generator_test.go  mocks_test.go  ratelimiter.go  ratelimiter_test.go  sampler.go  sampler_test.go  worker.go  worker_test.go
internal/log/: log.go
internal/output/: huggingface.go  huggingface_test.go  jsonl.go  jsonl_test.go  parquet.go  parquet_test.go  writer.go  writer_test.go
internal/provider/: error_test.go  errors.go  openai.go  openai_test.go  provider.go  registry.go  registry_test.go
internal/schema/: chat.go  chat_test.go  classification.go  classification_test.go  instruction.go  instruction_test.go  preference.go  preference_test.go  registry.go  registry_test.go  schema.go  schema_test.go
npm/: README.md  package.json
npm/scripts/: cli.js  postinstall.js
pip/: README.md  pyproject.toml
pip/scripts/: build_wheels.py
pip/src/kothaset/: __init__.py  __main__.py  _main.py
website/: index.html
(+2 files in other folders)
